added first website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>my name is tejas</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>My Website</title>
+</head>
+<body>
+  <h1>Hello, this is my first GitHub Pages site!</h1>
+</body>
+</html>
