--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <header>
         <div class="container">
             <h1>Tejas Raj</h1>
-            <p>Data Analyst | Business Intelligence | Machine Learning Enthusiast</p>
+            <p>Data Science | Data Analyst | Machine Learning Enthusiast</p>
         </div>
     </header>
     
@@ -237,6 +237,9 @@
                 <span class="skill-badge">Scikit-learn</span>
                 <span class="skill-badge">Tableau</span>
                 <span class="skill-badge">Git & GitHub</span>
+                <span class="skill-badge">MS Excel</span>
+                <span class="skill-badge">Power BI</span>
+                <span class="skill-badge">Machine Learning</span>
             </div>
         </section>
 
@@ -272,7 +275,7 @@
             <h2>Get In Touch 📬</h2>
             <p>I'm currently open to new opportunities. Feel free to reach out!</p>
             <div class="contact-links">
-                <a href="mailto:tejasraj9126@gmail.com">Email Me</a>
+                <a href="mailto:tejasraj.da@gmail.com">Email Me</a>
                 <a href="https://linkedin.com/in/tejasraj-analytics" target="_blank">LinkedIn</a>
             </div>
         </section>
