--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
     <header>
         <div class="container">
-            <img src="photo.jpg" alt="Profile Photo of Tejas Raj" class="profile-photo">
+            <img src="photo.jpg.jpg" alt="Profile Photo of Tejas Raj" class="profile-photo">
             <h1>Tejas Raj</h1>
             <p>Data Science | Data Analyst | Machine Learning Enthusiast</p>
         </div>
