--- a/index.html
+++ b/index.html
@@ -280,12 +280,16 @@
             <div class="skills-container">
                 <span class="skill-badge">Python</span>
                 <span class="skill-badge">SQL</span>
+                <span class="skill-badge">MongoDB</span>
+                <span class="skill-badge">MS Excel</span>
                 <span class="skill-badge">Pandas</span>
                 <span class="skill-badge">NumPy</span>
                 <span class="skill-badge">Matplotlib</span>
                 <span class="skill-badge">Seaborn</span>
                 <span class="skill-badge">Scikit-learn</span>
                 <span class="skill-badge">Tableau</span>
+                <span class="skill-badge">Power BI</span>
+                <span class="skill-badge">Machine Learning</span>
                 <span class="skill-badge">Git & GitHub</span>
             </div>
         </section>
