--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --body-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
         }
 
-        /* --- SVG ARROW CURSOR --- */
+        /* --- BIG SVG ARROW CURSOR --- */
         body {
             cursor: none; /* Hide default system cursor */
             font-family: var(--body-font);
@@ -30,23 +30,25 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 24px;
-            height: 24px;
+            width: 30px; /* Made cursor bigger */
+            height: 30px;
             pointer-events: none;
             z-index: 9999;
-            transform-origin: 0 0; /* Set transform origin to top-left for arrow */
-            transition: transform 0.1s ease;
+            transition: transform 0.2s ease, width 0.2s ease, height 0.2s ease;
         }
 
         .custom-cursor svg {
             width: 100%;
             height: 100%;
             fill: var(--accent-color);
-            filter: drop-shadow(0 0 4px rgba(74, 144, 226, 0.6));
+            filter: drop-shadow(0 0 5px rgba(74, 144, 226, 0.7));
             transition: fill 0.3s ease;
         }
 
         /* Hover effect */
+        .custom-cursor.hover {
+            transform: scale(1.2); /* Make cursor slightly bigger on hover */
+        }
         .custom-cursor.hover svg {
             fill: var(--primary-color);
         }
@@ -342,24 +344,12 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cursor = document.querySelector(".custom-cursor");
-            let posX = 0, posY = 0;
-            let mouseX = 0, mouseY = 0;
 
-            // Smooth follow effect using interpolation
-            function animate() {
-                posX += (mouseX - posX) * 0.2;
-                posY += (mouseY - posY) * 0.2;
-
-                cursor.style.transform = translate3d(${posX}px, ${posY}px, 0);
-
-                requestAnimationFrame(animate);
-            }
-            animate();
-
-            // Track mouse position
+            // Simple, direct positioning
             window.addEventListener("mousemove", e => {
-                mouseX = e.clientX;
-                mouseY = e.clientY;
+                const { clientX, clientY } = e;
+                cursor.style.left = ${clientX}px;
+                cursor.style.top = ${clientY}px;
             });
 
             // Hover interactions for links and buttons
