--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* --- SYSTEM CURSOR WITH AURORA TRAIL --- */
         body {
-            cursor: default; /* Restore the default system cursor */
+            cursor: auto; /* Restore the default system cursor */
             font-family: var(--body-font);
             margin: 0;
             background-color: #fff;
