--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
             --body-font: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
         }
 
-        /* --- SYSTEM CURSOR WITH SPARKLE TRAIL --- */
         body {
-            cursor: auto; /* Restore the default system cursor */
+            cursor: auto;
             font-family: var(--body-font);
             margin: 0;
             background-color: #fff;
             color: var(--text-color);
             scroll-behavior: smooth;
-            overflow-x: hidden; /* Prevent horizontal scroll from cursor trail */
+            overflow-x: hidden;
         }
 
-        /* This is the trail particle */
         .trail {
             position: fixed;
             height: 10px;
@@ -35,14 +33,14 @@
             border-radius: 50%;
             pointer-events: none;
             z-index: 9999;
-            animation: trail-fade 3s linear forwards; /* changed to 3s */
+            /* CHANGED DURATION TO 1.5s */
+            animation: trail-fade 1.5s linear forwards; 
         }
         
         @keyframes trail-fade {
             0% { transform: scale(1); opacity: 1; }
             100% { transform: scale(0); opacity: 0; }
         }
-        /* --- End Cursor CSS --- */
 
         .container {
             max-width: 1100px;
@@ -338,10 +336,10 @@
                 const randomColor = colors[Math.floor(Math.random() * colors.length)];
                 trail.style.backgroundColor = randomColor;
 
-                // Remove the element after the animation is finished
+                // CHANGED DURATION TO 1500ms (1.5 seconds)
                 setTimeout(() => {
                     trail.remove();
-                }, 3000); // match 3s animation
+                }, 1500); 
             });
         });
     </script>
