--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                         <h3>Netflix Analysis Project</h3>
                         <p>Analyzed a dataset of Netflix titles to uncover trends in content genres, release years, and ratings. Utilized Python libraries like Pandas and Matplotlib to visualize content distribution.</p>
                         <div class="project-links">
-                            <a href="#" target="_blank">Live Demo</a>
-                            <a href="#" target="_blank">GitHub Repo</a>
+                            <a href="https://github.com/tejasraj-da/MyProjects" target="_blank">View Code</a>
+                            <a href="#" target="_blank">View Dashboard</a>
                         </div>
                     </div>
                     <div class="project-card">
