--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                         <p>Analyzed a dataset of Netflix titles to uncover trends in content genres, release years, and ratings. Utilized Python libraries like Pandas and Matplotlib to visualize content distribution.</p>
                         <div class="project-links">
                             <a href="https://github.com/tejasraj-da/MyProjects" target="_blank">View Code</a>
-                            <a href="#" target="_blank">View Dashboard</a>
+                            <a href="https://github.com/tejasraj-da/MyProjects/blob/main/Netflix%20Analysis-Dashboard.png" target="_blank">View Dashboard</a>
                         </div>
                     </div>
                     <div class="project-card">
