--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <h3>Netflix Analysis Project</h3>
                         <p>Analyzed a dataset of Netflix titles to uncover trends in content genres, release years, and ratings. Utilized Python libraries like Pandas and Matplotlib to visualize content distribution.</p>
                         <div class="project-links">
-                            <a href="https://github.com/tejasraj-da/MyProjects" target="_blank">View Code</a>
+                            <a href="https://github.com/tejasraj-da/MyProjects/blob/main/netflix%20analysis/netflix_analysis.ipynb" target="_blank">View Code</a>
                             <a href="https://github.com/tejasraj-da/MyProjects/blob/main/Netflix%20Analysis-Dashboard.png" target="_blank">View Dashboard</a>
                         </div>
                     </div>
