--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         <h3>IPL Analysis Project</h3>
                         <p>Performed an in-depth analysis of the Indian Premier League (IPL) dataset to find key player statistics, match outcomes, and team performance metrics. Created visualizations to highlight top performers.</p>
                         <div class="project-links">
-                            <a href="#" target="_blank">Live Demo</a>
+                            <a href="iplAnalysis.ipynb" target="_blank">View Code</a>
                             <a href="#" target="_blank">GitHub Repo</a>
                         </div>
                     </div>
