--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
                         <h3>IPL Analysis Project</h3>
                         <p>Performed an in-depth analysis of the Indian Premier League (IPL) dataset to find key player statistics, match outcomes, and team performance metrics. Created visualizations to highlight top performers.</p>
                         <div class="project-links">
-                            <a href="iplAnalysis.ipynb" target="_blank">View Code</a>
-                            <a href="IPLDASHBOARD.png" target="_blank">GitHub Repo</a>
+                            <a href="https://github.com/tejasraj-da/IPL-ANALYSIS/blob/main/iplAnalysis.ipynb" target="_blank">View Code</a>
+                            <a href="IPLDASHBOARD.png" target="_blank">View Dashboard</a>
                         </div>
                     </div>
                     <div class="project-card">
