--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <p>Performed an in-depth analysis of the Indian Premier League (IPL) dataset to find key player statistics, match outcomes, and team performance metrics. Created visualizations to highlight top performers.</p>
                         <div class="project-links">
                             <a href="https://github.com/tejasraj-da/IPL-ANALYSIS/blob/main/iplAnalysis.ipynb" target="_blank">View Code</a>
-                            <a href="IPLDASHBOARD.png" target="_blank">View Dashboard</a>
+                            <a href="https://github.com/tejasraj-da/IPL-ANALYSIS/blob/main/IPLDASHBOARD.png" target="_blank">View Dashboard</a>
                         </div>
                     </div>
                     <div class="project-card">
