--- a/index.html
+++ b/index.html
@@ -294,8 +294,10 @@
                         <h3>Stock Prediction Analysis</h3>
                         <p>Developed a time-series model to predict future stock prices based on historical data. Leveraged machine learning techniques and libraries such as Scikit-learn and Pandas for data manipulation and modeling.</p>
                         <div class="project-links">
-                            <a href="#" target="_blank">Live Demo</a>
-                            <a href="#" target="_blank">GitHub Repo</a>
+                            <a href="https://github.com/tejasraj-da/STOCK-PREDICTION/blob/main/stock%20prediction/tcs.ipynb
+" target="_blank">View Code</a>
+                            <a href="https://github.com/tejasraj-da/STOCK-PREDICTION/blob/main/TCS%20STOCK%20ANALYSIS.png
+" target="_blank">View Dashboard</a>
                         </div>
                     </div>
                 </div>
